2007-04-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp: Rely on default 0 value for z axis.
	* src/CMakeLists.txt, src/gui/window.cpp, src/gui/widgets,
	src/gui/widgets/resizegrip.cpp, src/gui/widgets/resizegrip.h,
	src/gui/inventorywindow.cpp, src/gui/window.h, src/Makefile.am:
	Reimplemented window resizing. It is now once again possible to resize
	windows using their borders (except for the top one, since that's the
	title bar for Guichan) and the resize grip in the bottom right is much
	easier to grab.
	* src/gui/window.cpp: Increased minimum window height and fixed a
	problem with setting window content size which was introduced with the
	new resize grip.

2007-04-05  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/main.cpp:  Unified storage of configuration, updates and
	screenshots in home directory.

2007-04-03  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/items/generic-easteregg-blue.png,
	data/graphics/items/generic-easteregg-green.png,
	data/graphics/items/generic-easteregg-pink.png,
	data/graphics/items/generic-easteregg-red.png,
	data/graphics/items/generic-easteregg-teal.png,
	data/graphics/items/generic-easteregg-yellow.png,
	data/items.xml: Added six different easter egg item graphics for the
	easter event. Item IDs are 1208 - 1213.
	* data/graphics/sprites/npcs.png: Added bunny girl npc for the easter
	event.

2007-04-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/game.cpp: Screenshots are no longer saved directly in the users
	home directory on UNIX systems but in the sub folder /.tmw/. A chatlog
	message about the success of the screenshot saving does appear now.
	Based on a patch by Patrick "the-me" Matthäi.

2007-03-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Icon loading doesn't necessarily succeed, so better
	not crash when it doesn't.

2007-03-20  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/updatewindow.cpp: Cancel button is now disabled after
	downloading is finished.
