@@ -18,7 +18,7 @@
  *  along with The Mana World; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *  $Id:
+ *  $Id$
  */
 
 #include "equipmentdb.h"
@@ -71,11 +71,8 @@ EquipmentDB::load()
     }
 
     //iterate <equipment>s
-    for (   xmlNodePtr equipmentNode = rootNode->xmlChildrenNode;
-            equipmentNode != NULL;
-            equipmentNode = equipmentNode->next)
+    for_each_xml_child_node(equipmentNode, rootNode)
     {
-
         if (!xmlStrEqual(equipmentNode->name, BAD_CAST "equipment"))
         {
             continue;
@@ -86,9 +83,7 @@ EquipmentDB::load()
         currentInfo->setSlot (XML::getProperty(equipmentNode, "slot", 0));
 
         //iterate <sprite>s
-        for (   xmlNodePtr spriteNode = equipmentNode->xmlChildrenNode;
-                spriteNode != NULL;
-                spriteNode = spriteNode->next)
+        for_each_xml_child_node(spriteNode, equipmentNode)
         {
             if (!xmlStrEqual(spriteNode->name, BAD_CAST "sprite"))
             {
