@@ -28,6 +28,9 @@
 
 #include <string>
 
+/**
+ * XML helper functions.
+ */
 namespace XML
 {
     /**
@@ -42,5 +45,8 @@ namespace XML
     std::string
     getProperty(xmlNodePtr node, const char *name, const std::string &def);
 }
+
+#define for_each_xml_child_node(var, parent) \
+    for (xmlNodePtr var = parent->xmlChildrenNode; var; var = var->next)
 
 #endif
